Added a couple of TODO comments

--- a/products-catalog-webapi/src/main/resources/application.properties
+++ b/products-catalog-webapi/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #GENERAL APPLICATION SETTINGS
 server.port=8080
 
-# Change this to 'prod' at deployment to product
+# TODO Change this to 'prod' when deployed to production
 spring.profiles.active=dev
 
 #APP DEFAULT SETTINGS
