--- a/products-catalog-webapi/src/main/resources/databaseconfig.properties
+++ b/products-catalog-webapi/src/main/resources/databaseconfig.properties
@@ -1,5 +1,6 @@
 #DATABASE SETTINGS
 
+#TODO Delete these hardcoded DB config settings
 #spring.datasource.url=jdbc:postgresql://localhost/products_db
 #spring.datasource.username=products_db_sys
 #spring.datasource.password=test1234
